...
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_text_view"
                android:fontFamily="@font/caviar_dreams"
                android:textStyle="bold"
                android:textSize="@dimen/title_font_size"
                tools:text="@string/recipe_title"
                android:textColor="@color/black_69"
                android:gravity="center_horizontal"
...
